# vsdm

./: CITATION.cff  LICENSE  README.md  pyproject.toml
tools/: Calculating Coefficients.ipynb  Plots_Angular.ipynb  Plots_Evaluation.ipynb  Plots_Interpolation.ipynb  Plots_Radial.ipynb  Plots_RateCalc.ipynb  Plots_fs2.ipynb  Rate Calculation.ipynb  SHM_gX.py  Wigner D and G.ipynb  demo_fs2.py  demo_gX.py
tools/.ipynb_checkpoints/: Wavelet Interpolation-checkpoint.ipynb
tools/demo/: SHM_v250.csv  fs2_box_4_7_10.csv
vsdm/: __init__.py  adaptive.py  analytic.py  basis.py  gaussians.py  haar.py  matrixcalc.py  portfolio.py  projection.py  ratecalc.py  units.py  utilities.py  wigner.py
